--- a/src/main/docs/guide/quickStart/bsonQuick.adoc
+++ b/src/main/docs/guide/quickStart/bsonQuick.adoc
@@ -44,3 +44,7 @@ snippet::example.Book[project-base="doc-examples/example-bson", source="main"]
 <1> The type is annotated with ann:serde.annotation.Serdeable[] to enable serialization/deserialization
 <2> You can use `@BsonProperty` from BSON annotations
 <3> You can use `@BsonCreator` from BSON annotations
+
+Once you have a type that can be serialized and deserialized you can use the api:serde.ObjectMapper[] interface to do so:
+
+snippet::example.BookTest[project-base="doc-examples/example"]
