--- a/src/main/docs/guide/quickStart/jacksonQuick.adoc
+++ b/src/main/docs/guide/quickStart/jacksonQuick.adoc
@@ -42,3 +42,7 @@ snippet::example.Book[project-base="doc-examples/example", source="main"]
 <1> The type is annotated with ann:serde.annotation.Serdeable[] to enable serialization/deserialization
 <2> You can use `@JsonProperty` from Jackson annotations
 <3> You can use `@JsonCreator` from Jackson annotations
+
+Once you have a type that can be serialized and deserialized you can use the api:serde.ObjectMapper[] interface to do so:
+
+snippet::example.BookTest[project-base="doc-examples/example"]
