--- a/src/main/docs/guide/serdes.adoc
+++ b/src/main/docs/guide/serdes.adoc
@@ -33,3 +33,24 @@ Note that if multiple api:serde.Serializer[] beans exist you will get a `NonUniq
 It is quite common during deserialization to have multiple possible deserializer options. For example a `HashSet` can be deserialized to both a `Collection` and a `Set`.
 
 In these cases you should declare an `@Order` annotation higher priority value to control which deserializer is chosen by default.
+
+=== Property Level Serializer or Deserializer
+
+You can also customize the serializer and/or deserializer on a per field, constructor, method etc. basis by using the `@Serializable(using=..)` and/or `@Deserializable(using=..)` annotations.
+
+NOTE: Frequently in this case you will more than one serializer/deserializer for a given type and you should use `@Primary` or `@Secondary` to customize bean property so one is selected by default.
+
+For example say you add another secondary `Serde` to store the previous `Point` example in reverse order:
+
+snippet::example.ReversePointSerde[project-base="doc-examples/example", source="main"]
+
+<1> This bean is made `@Secondary` so the primary `Serde` serializes by default in the correct order
+<2> The coordinates are stored in reverse order
+
+You can then define annotations at field, parameter, method etc. level to customize serialization/deserialization for just that case:
+
+snippet::example.Place[project-base="doc-examples/example", source="main"]
+
+<1> `@Serializable(using=..)` indicates to use the `ReversePointSerde` to serialize the coordinates
+<2> `@Serializable(using=..)` indicates to use the `ReversePointSerde` to deserialize the coordinates
+
