change build to be closer to convention.
Set projectGroup in gradle.properties

replace docs-examples by convention test-suite modules

remvoe `serde-build-logic

remove `serde-module` apply `io.micronaut.build.internal.module` instead.

--- a/src/main/docs/guide/keys.adoc
+++ b/src/main/docs/guide/keys.adoc
@@ -2,11 +2,11 @@ Keys with JSON are always written as Strings however you can use types other tha
 
 For example given the following class:
 
-snippet::example.Location[project-base="doc-examples/example", source="main"]
+snippet::example.Location[source="main"]
 
 That defines a custom `Feature` type for keys. Micronaut Serialization won't know how to deserialize this type, so along with the type a `TypeConverter` should be defined:
 
-snippet::example.Feature[project-base="doc-examples/example", source="main"]
+snippet::example.Feature[source="main"]
 
 <1> For serialization by default `toString()` is called, but you can also register a `TypeConverter` from `Feature` to `String` to customize this.
 <2> For deserialization a `TypeConverter` is necessary to convert the string key into the required type.
