build: align build with other modules
I've changed the build to be closer to what we do in other modules:

- bump up micronaut to 3.2.4
- bump up micronautDocsVersion to 2.0.0
- Set projectGroup in gradle.properties
- replace docs-examples by convention test-suite modules
- remove serde-build-logic.
- remove serde-module apply io.micronaut.build.internal.module instead. serde-build-logic was using io.micronaut.build.internal.base-module not sure why. We use module not base-module in the rest of the modules.

--- a/src/main/docs/guide/quickStart/bsonQuick.adoc
+++ b/src/main/docs/guide/quickStart/bsonQuick.adoc
@@ -39,10 +39,9 @@ In a Maven build you need to add the necessary transitive excludes for the `micr
 
 WARNING: If you third-party dependencies have direct dependencies on Jackson Databind it may not be an option for you to exclude Jackson.
 
-
 With the correct dependencies in place you can now define an object to be serialized:
 
-snippet::example.Book[project-base="doc-examples/example-bson", source="main"]
+snippet::example.Book[project-base="test-suite-bson", source="main"]
 
 <1> The type is annotated with ann:serde.annotation.Serdeable[] to enable serialization/deserialization
 <2> You can use `@BsonProperty` from BSON annotations
@@ -50,4 +49,4 @@ snippet::example.Book[project-base="doc-examples/example-bson", source="main"]
 
 Once you have a type that can be serialized and deserialized you can use the api:serde.ObjectMapper[] interface to do so:
 
-snippet::example.BookTest[project-base="doc-examples/example"]
+snippet::example.BookTest[]
