--- a/src/main/docs/guide/quickStart/jacksonQuick.adoc
+++ b/src/main/docs/guide/quickStart/jacksonQuick.adoc
@@ -39,7 +39,7 @@ WARNING: If you third-party dependencies have direct dependencies on Jackson Dat
 
 With the correct dependencies in place you can now define an object to be serialized:
 
-snippet::example.Book[project-base="doc-examples/example", source="main"]
+snippet::example.Book[source="main"]
 
 <1> The type is annotated with ann:serde.annotation.Serdeable[] to enable serialization/deserialization
 <2> You can use `@JsonProperty` from Jackson annotations
@@ -49,4 +49,4 @@ TIP: If you don't want to add a Micronaut Serialization annotation then you can 
 
 Once you have a type that can be serialized and deserialized you can use the api:serde.ObjectMapper[] interface to do so:
 
-snippet::example.BookTest[project-base="doc-examples/example"]
+snippet::example.BookTest[]
