--- a/src/main/docs/guide/quickStart/jacksonQuick.adoc
+++ b/src/main/docs/guide/quickStart/jacksonQuick.adoc
@@ -12,6 +12,10 @@ configurations.all {
 }
 ----
 
+Also, add the same artifact to the `dependencies` block:
+
+dependency:micronaut-serde-jackson[groupId="io.micronaut.serde",scope="implementation", version="{version}"]
+
 In a Maven build you need to add the necessary transitive excludes for the `micronaut-runtime` module, and any other module that depends on `micronaut-jackson-databind`, plus add a dependency on `micronaut-serde-jackson`:
 
 [source,xml,subs="attributes+"]
@@ -35,7 +39,7 @@ In a Maven build you need to add the necessary transitive excludes for the `micr
 </dependency>
 ----
 
-WARNING: If you third-party dependencies have direct dependencies on Jackson Databind it may not be an option for you to exclude Jackson.
+WARNING: If your third-party dependencies have direct dependencies on Jackson Databind it may not be an option to exclude it.
 
 With the correct dependencies in place you can now define an object to be serialized:
 
