--- a/src/main/docs/guide/quickStart/bsonQuick.adoc
+++ b/src/main/docs/guide/quickStart/bsonQuick.adoc
@@ -7,7 +7,7 @@ To do so in a Gradle build add the following configuration (either Groovy or Kot
 configurations.all {
     resolutionStrategy.dependencySubstitution {
         substitute(module("io.micronaut:micronaut-jackson-databind"))
-            .using(module("jakarta.json.bind:jakarta.json.bind-api:2.0.0"))
+            .using(module("io.micronaut.serde:micronaut-serde-bson:{version}"))
         substitute(module("io.micronaut:micronaut-jackson-core"))
             .using(module("io.micronaut.serde:micronaut-serde-bson:{version}"))
     }
@@ -37,12 +37,6 @@ In a Maven build you need to add the necessary transitive excludes for the `micr
   <groupId>io.micronaut.serde</groupId>
   <artifactId>micronaut-serde-bson</artifactId>
   <version>{version}</version>
-  <scope>compile</scope>
-</dependency>
-<dependency>
-  <groupId>jakarta.json.bind</groupId>
-  <artifactId>jakarta.json.bind-api</artifactId>
-  <version>2.0.0</version>
   <scope>compile</scope>
 </dependency>
 ----
