--- a/src/main/docs/guide/quickStart/jsonpQuick.adoc
+++ b/src/main/docs/guide/quickStart/jsonpQuick.adoc
@@ -1,53 +1,10 @@
-To completely remove all dependencies on Jackson and use JSON-B annotations in your source code combined with JSON-P at a runtime you should exclude the `micronaut-jackson-databind` and `micronaut-jackson-core` modules from your application and replace them with `micronaut-serde-jsonp`.
+To completely remove all dependencies on Jackson and use JSON-B annotations in your source code combined with JSON-P at a runtime replace the `micronaut-jackson-databind` and `micronaut-jackson-core` modules with `micronaut-serde-jsonp`.
 
-To do so in a Gradle build add the following configuration (either Groovy or Kotlin):
-
-[source,groovy,subs="attributes+"]
-----
-configurations.all {
-    resolutionStrategy.dependencySubstitution {
-        substitute(module("io.micronaut:micronaut-jackson-databind"))
-            .using(module("jakarta.json.bind:jakarta.json.bind-api:2.0.0"))
-        substitute(module("io.micronaut:micronaut-jackson-core"))
-            .using(module("io.micronaut.serde:micronaut-serde-jsonp:{version}"))
-    }
-}
-----
-
-Also, add the same artifact to the `dependencies` block:
+Add the following artifact to the `dependencies` block:
 
 dependency:micronaut-serde-jsonp[groupId="io.micronaut.serde",scope="implementation", version="{version}"]
 
-In a Maven build you need to add the necessary transitive excludes for the `micronaut-runtime` module, and any other module that depend on `micronaut-jackson-databind` and `micronaut-jackson-core`, plus add a dependency on `micronaut-serde-jackson`:
-
-[source,xml,subs="attributes+"]
-----
- <dependency>
-  <groupId>io.micronaut</groupId>
-  <artifactId>micronaut-runtime</artifactId>
-  <exclusions>
-    <exclusion>
-      <groupId>io.micronaut</groupId>
-      <artifactId>micronaut-jackson-databind</artifactId>
-    </exclusion>
-  </exclusions>
-  <scope>compile</scope>
-</dependency>
-<dependency>
-  <groupId>io.micronaut.serde</groupId>
-  <artifactId>micronaut-serde-jsonp</artifactId>
-  <version>{version}</version>
-  <scope>compile</scope>
-</dependency>
-<dependency>
-  <groupId>jakarta.json.bind</groupId>
-  <artifactId>jakarta.json.bind-api</artifactId>
-  <version>2.0.0</version>
-  <scope>compile</scope>
-</dependency>
-----
-
-WARNING: If your third-party dependencies have direct dependencies on Jackson Databind it may not be an option to exclude it.
+WARNING: If your third-party dependencies have direct dependencies on Jackson Databind it may not be an option to omit it.
 
 With the correct dependencies in place you can now define an object to be serialized:
 
